# scryme

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .npmrc  README.md  SCRYME_INTEGRATION.md  build_log.txt  build_log_2.txt  components_to_replace.txt  deploy.sh  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fix_prisma_imports.py  package-lock.json  package.json  pnpm-lock.yaml  pos_ui_list.txt  repo_ui_list.txt  test-env.ts  turbo.json  type-check_output_v6.txt  type-check_output_v7.txt  type-check_output_v8.txt  typecheck_errors.txt  ui_dist_files.txt
.Jules/: palette.md  sentinel.md
.changeset/: beige-tips-shake.md  calm-papayas-smoke.md  config.json  curly-books-play.md  empty-swans-act.md  fair-knives-taste.md  funny-paws-relax.md  giant-lilies-knock.md  lemon-yaks-sniff.md  loud-donkeys-fail.md  petite-kiwis-laugh.md  plenty-apes-buy.md  polite-bears-sink.md  ripe-results-float.md  short-donuts-melt.md  sixty-teeth-raise.md  spotty-tigers-wave.md  stale-dancers-listen.md  swift-cows-own.md  tangy-teams-wash.md  tasty-spiders-visit.md  thin-birds-trade.md  tough-bats-tell.md  tough-eels-dream.md  wicked-lizards-drop.md  wide-paths-run.md  young-eggs-worry.md
.github/workflows/: bakery-ci.yml  bakery-pre-release.yml  ci.yml  pipeline.yml  release.yml  test.yml
.jules/: bolt.md  palette.md  sentinel.md
apps/android/: settings.gradle.kts
apps/api/: .env.example  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  eslint.config.mjs  nest-cli.json  package.json  tsconfig copy.json  tsconfig.json  v3-spec.json  vitest.config.ts  vitest.setup.ts  webpack.config.js  webpack.config.mjs  wpack.js
apps/bakery/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
apps/bakery/src-tauri/: Cargo.toml  tauri.conf.json
apps/bakery/src-tauri/capabilities/: default.json
apps/bakery/src-tauri/icons/: icon.icns
apps/bakery/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  migrations.rs  models.rs  scaling.rs  sync.rs
apps/bakery/src-tauri/src/commands/: auth.rs  baker.rs  batch.rs  category.rs  inventory.rs  mod.rs  recipe.rs  settings.rs  system.rs  template.rs  unit.rs
apps/crm/: .env.example  .eslintrc.js  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  middleware.ts  next.config.js  package.json  proxy.ts  sentry.client.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/docs/: Dockerfile  index.html  package.json  vite.config.ts
apps/mcp/: README.md  package.json  tsconfig.json
apps/portal/: .env.example  .eslintrc.cjs  CHANGELOG.md  Dockerfile  docker-compose.yml  middleware.ts  next.config.ts  package.json  proxy.ts  tailwind.config.js
apps/pos/: .env.example  .gitignore  .oxlintignore  .releaserc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TRACKING_README.md  entrypoint.sh  index.html  nginx.conf  oxlint.json  package.json  playwright.config.ts  posthog-setup-report.md  tsconfig.json  vite.config.ts  vitest.config.ts
apps/pos/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.pharmacy.conf.json  tauri.restaurant.conf.json  tauri.retail.conf.json  tauri.standalone.conf.json  tauri.supermarket.conf.json
apps/pos/src-tauri/capabilities/: customer.json  default.json  desktop.json
apps/pos/src-tauri/icons/: icon.icns
apps/pos/src-tauri/src/: api_config.rs  customer_manager.rs  customer_screen_state.rs  data_management.rs  escpos_builder.rs  http_server.rs  kds_hub_server.rs  kds_models.rs  lib.rs  licensing.rs  main.rs  migration.rs  models.rs  network_monitor.rs  notification_manager.rs  pricing_manager.rs  printer_manager.rs  product_manager.rs  sale_manager.rs  scanner_manager.rs  security.rs  shift_manager.rs  stock_acceptance.rs  stock_acceptance_models.rs  stock_transfer.rs  utils.rs
apps/pos/src-tauri/src/stores/: audit_store.rs  auth_store.rs  customer_store.rs  delivery_store.rs  finance_store.rs  mod.rs  pricing_store.rs  product_store.rs  sales_store.rs  shift_store.rs  table_store.rs
apps/pos/src-tauri/src/tests/: customer_tests.rs  db_tests.rs  mod.rs  pricing_tests.rs  product_tests.rs  stock_tests.rs  test_utils.rs
apps/pos/src-tauri/tests/: integration_tests.rs
apps/site/: .env.example  CHANGELOG.md  Dockerfile  instrumentation-client.ts  instrumentation.ts  next.config.ts  (+8 more)
scripts/: ensure-unique-version.js  generate-secrets.sh  sync-tauri-version.sh
(+1295 files in other folders)
